--- a/src/components/templates/TemplateHero.module.scss
+++ b/src/components/templates/TemplateHero.module.scss
@@ -77,7 +77,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    padding: 60px 0; // Match Trending section padding
+    padding: 100px 0 60px 0; // Increased top padding by 40px (60px + 40px = 100px)
   }
 
   .backLink {
