--- a/src/styles/_blog-article.scss
+++ b/src/styles/_blog-article.scss
@@ -1,4 +1,20 @@
+.blog-article-container {
+  display: flex;
+  gap: 20px;
+
+  @include media-breakpoint-down(lg) {
+    flex-direction: column;
+  }
+}
+
 .blog-article {
+  width: 83.33%;
+  max-width: 800px;
+
+  @include media-breakpoint-down(lg) {
+    width: 100%;
+  }
+
   p {
     font-size: 1.2rem;
   }
