--- a/src/components/pages/UseCases/BeginnerBasics/TemplateCard.module.scss
+++ b/src/components/pages/UseCases/BeginnerBasics/TemplateCard.module.scss
@@ -9,7 +9,7 @@
   border-radius: 12px; // More rounded borders
   display: flex;
   position: relative;
-  margin: 0 auto; // Centraliza cada card
+  margin: 0 auto; // Center each card
   text-decoration: none; // Remove underline from Link
   transition: all 0.2s ease-in-out;
 
